<resources>

    <string name="settings">Settings</string>

    <string name="app_name">AndroidLesson1</string>
    <string name="city">Moscow</string>

    <string name="wind">00</string>
    <string name="pressure">600</string>
    <string name="humdity">00</string>

    <string name="date_0">January 2, 2021, Saturday</string>
    <string name="date_1">January 3, 2021</string>
    <string name="date_2">January 4, 2021</string>
    <string name="date_3">January 5, 2021</string>
    <string name="date_4">January 6, 2021</string>
    <string name="date_5">January 7, 2021</string>
    <string name="date_6">January 8, 2021</string>
    <string name="date_7">January 9, 2021</string>

    <string name="day_of_week_1">Sunday</string>
    <string name="day_of_week_2">Monday</string>
    <string name="day_of_week_3">Tuesday</string>
    <string name="day_of_week_4">Wednesday</string>
    <string name="day_of_week_5">Thursday</string>
    <string name="day_of_week_6">Friday</string>
    <string name="day_of_week_7">Saturday</string>

    <string name="temperature_0">-6</string>
    <string name="temperature_1">8</string>
    <string name="temperature_2">-2</string>
    <string name="temperature_3">6</string>
    <string name="temperature_4">3</string>
    <string name="temperature_5">0</string>
    <string name="temperature_6">4</string>
    <string name="temperature_7">-1</string>


    //для окна настроек
    <string name="light_theme">Light theme</string>
    <string name="GPS">BY CURRENT GPS COORDINATES</string>

    <string name="select_city">Select city</string>
    <string name="city_1">Moscow</string>
    <string name="city_2">St. Petersburg</string>
    <string name="city_3">Stavropol</string>

    <string name="save_and_out">Save and out</string>
    <string name="clear_list">Clear list</string>
    <string name="title_dialog">Are you sure want to delete city\'s browsing history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="history_of_cities">History of cities</string>
    <string name="thermometer">Thermometer</string>
    <string name="search">Search</string>
    <string name="set_temperature">Set temperature</string>
    <string name="input_temperature">input temperature</string>
    <string name="thunderstorm">THUNDERSTORM</string>
    <string name="wind_and_colon">Wind: </string>
    <string name="pressure_and_colon">Pressure: </string>
    <string name="humidity_and_colon">Humidity: </string>
    <string name="website">Website</string>
</resources>