<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentBottom"

    android:id="@+id/Linear_layout_bottom"

    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background_dark"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="244dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_1"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="5dp"
                android:gravity="bottom"
                android:text="@string/date_1"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/day_of_week_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/day_of_week_1"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/weather_picture_1"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/rain" />

        <TextView
            android:id="@+id/temperature_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center|clip_vertical|center_horizontal"
            android:text="@string/temperature_1"
            android:textColor="@color/text_color"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background_light"
        android:onClick="onClickLinearLayoutTwo"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="244dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_2"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="5dp"
                android:gravity="bottom"
                android:text="@string/date_2"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/day_of_week_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/day_of_week_2"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/weather_picture_2"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/snowing" />

        <TextView
            android:id="@+id/temperature_2"
            android:layout_width="13dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center|clip_vertical|center_horizontal"
            android:text="@string/temperature_2"
            android:textColor="@color/text_color"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background_dark"
        android:onClick="onClickLinearLayoutThree"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="244dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_3"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="5dp"
                android:gravity="bottom"
                android:text="@string/date_3"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/day_of_week_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/day_of_week_3"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/weather_picture_3"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/storm" />

        <TextView
            android:id="@+id/temperature_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center|clip_vertical|center_horizontal"
            android:text="@string/temperature_3"
            android:textColor="@color/text_color"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background_light"
        android:onClick="onClickLinearLayoutFour"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="244dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_4"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="5dp"
                android:gravity="bottom"
                android:text="@string/date_4"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/day_of_week_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/day_of_week_4"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/weather_picture_4"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/snowflake" />

        <TextView
            android:id="@+id/temperature_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center|clip_vertical|center_horizontal"
            android:text="@string/temperature_4"
            android:textColor="@color/text_color"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_5"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background_dark"
        android:onClick="onClickLinearLayoutFive"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="244dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_5"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="5dp"
                android:gravity="bottom"
                android:text="@string/date_5"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/day_of_week_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/day_of_week_5"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/weather_picture_5"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/rain2" />

        <TextView
            android:id="@+id/temperature_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center|clip_vertical|center_horizontal"
            android:text="@string/temperature_5"
            android:textColor="@color/text_color"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_6"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background_light"
        android:onClick="onClickLinearLayoutSix"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="244dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_6"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="5dp"
                android:gravity="bottom"
                android:text="@string/date_6"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/day_of_week_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/day_of_week_6"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/weather_picture_6"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/sun" />

        <TextView
            android:id="@+id/temperature_6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center|clip_vertical|center_horizontal"
            android:text="@string/temperature_6"
            android:textColor="@color/text_color"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_7"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background_dark"
        android:onClick="onClickLinearLayoutSeven"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="244dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_7"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="5dp"
                android:gravity="bottom"
                android:text="@string/date_7"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/day_of_week_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/day_of_week_7"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/weather_picture_7"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/rain1" />

        <TextView
            android:id="@+id/temperature_7"
            android:layout_width="13dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center|clip_vertical|center_horizontal"
            android:text="@string/temperature_7"
            android:textColor="@color/text_color"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>