<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_0"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/linearlayout_background"
    android:orientation="vertical"

    tools:context=".workingWithFragments.FragmentTop">

    <TextView
        android:id="@+id/city_0"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/city"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/date_0"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/date_0"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/temperature_0"
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="45dp"
                android:gravity="center_vertical|end"
                android:text="@string/temperature_0"
                android:textColor="@color/text_color"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/weather_picture_0"
                android:layout_width="69dp"
                android:layout_height="57dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="35dp"
                android:alpha="0.8"
                app:srcCompat="@drawable/rain_night" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/image_wind"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="99dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/autumn" />

        <TextView
            android:id="@+id/wind_0"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="58dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="99.00"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/image_pressure"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            app:srcCompat="@drawable/barometer" />

        <TextView
            android:id="@+id/pressure_0"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:gravity="center_vertical"
            android:text="1000"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/image_humidity"
            android:layout_width="30dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginStart="58dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/drop" />

        <TextView
            android:id="@+id/humidity_0"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="94dp"
            android:gravity="center_vertical"
            android:text="@string/humdity"
            android:textColor="@color/text_color"
            android:textSize="12sp" />
    </FrameLayout>
</LinearLayout>
